# E3MoP

./: readme.md
E3MoP/ceres_path_smoother/: .clang-format  CMakeLists.txt  README.md  blp_plugin.xml  package.xml
E3MoP/ceres_path_smoother/include/ceres_path_smoother/: ceres_local_planner_ros.h  ceres_path_smoother.h  ceres_path_smoother_ros.h  utils.h
E3MoP/ceres_path_smoother/include/ceres_path_smoother/cost_functor/: deviation_cost_functor.h  obstacle_cost_functor.h  smooth_cost_functor.h
E3MoP/ceres_path_smoother/src/: ceres_local_planner_ros.cpp  ceres_path_smoother.cpp  ceres_path_smoother_ros.cpp
E3MoP/path_smoother_base/: .clang-format  CMakeLists.txt  README.md  package.xml
E3MoP/path_smoother_base/include/path_smoother_base/: local_planner_util.h  path_smoother_base.h  spline_interpolation.h  utils.h
E3MoP/path_smoother_base/src/: local_planner_util.cpp  path_smoother_base.cpp  spline_interpolation.cpp  utils.cpp
local-planning-benchmark/gazebo_world/world/: narrow_graph_new.world  unstructed.world  wait_move.world
local-planning-benchmark/move_base_benchmark/: rviz_osqp.rviz
local-planning-benchmark/move_base_benchmark/doc/metric_evaluation/: log.txt
local-planning-benchmark/move_base_benchmark/launch/: benchmark.launch  benchmark_bezier.launch  log.txt  move_base_benchmark.launch  rviz_ceres_navigation.rviz  rviz_navigation.rviz  simple_navigation_goals.launch
local-planning-benchmark/move_base_benchmark/maps/map_1/: map_1.pgm  map_1.yaml
local-planning-benchmark/move_base_benchmark/maps/unstructed/: map(复件).yaml  map.pgm  map.yaml
local-planning-benchmark/move_base_benchmark/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params_osqp.yaml  teb_tracking_params_ceres.yaml  teb_tracking_params_osqp.yaml
local-planning-benchmark/move_base_benchmark/params/dwa/: dwa_local_planner_params copy 2.yaml  dwa_local_planner_params copy.yaml  dwa_local_planner_params.yaml
local-planning-benchmark/move_base_benchmark/params/odom_nav_params/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_osqp.yaml
local-planning-benchmark/move_base_benchmark/params/tebK/: costmap_common_params.yaml  teb_local_planner_params.yaml
local-planning-benchmark/move_base_benchmark/src/: goal_visualize.py  simple_navigation_goals.cpp  simple_navigation_goals_fei.cpp
