<?xml version="1.0"?>
<package format="2">
  <name>ceres_path_smoother</name>
  <version>0.0.0</version>
  <description>The ceres_path_smoother package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wenjian@mail.nankai.edu.cn">Jian Wen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>distance_map_layer</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lattice_path_planner</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>path_smoother_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>base_local_planner</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>distance_map_layer</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>lattice_path_planner</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>path_smoother_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>teb_local_planner</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>distance_map_layer</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lattice_path_planner</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>path_smoother_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>
</package>
